--- a/src/sample/LBT/settings.fxml
+++ b/src/sample/LBT/settings.fxml
@@ -30,7 +30,7 @@
         <Button fx:id="logOutBTN" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#callLogOut" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
             <graphic>
                 <ImageView fitHeight="18.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
-                    <Image url="@../../photos/logout.png" />
+                    <Image url="@../../photos/logoutDark.png" />
                 </ImageView>
             </graphic>
             <font>
@@ -57,7 +57,7 @@
             </font>
             <graphic>
                 <ImageView fitHeight="22.0" fitWidth="17.0" pickOnBounds="true" preserveRatio="true">
-                    <Image url="@../../photos/settings.png" />
+                    <Image url="@../../photos/settingDark.png" />
                 </ImageView>
             </graphic>
             <StackPane.margin>
@@ -67,7 +67,7 @@
         <Button fx:id="notificationBTN" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#callNotifications" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
             <graphic>
                 <ImageView fitHeight="20.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
-                    <Image url="@../../photos/notifications.png" />
+                    <Image url="@../../photos/notificationDark.png" />
                 </ImageView>
             </graphic>
             <font>
@@ -80,7 +80,7 @@
         <Button fx:id="chatBubbleBTN" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#callChatBubble" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
             <graphic>
                 <ImageView fitHeight="21.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
-                    <Image url="@../../photos/chat.png" />
+                    <Image url="@../../photos/chatDark.png" />
                 </ImageView>
             </graphic>
             <font>
