--- a/src/styles/style4.css
+++ b/src/styles/style4.css
@@ -1,7 +1,6 @@
 .button{
     -fx-border-style: none;
-    -fx-background-color: #474546
-;
+    -fx-background-color: #474546;
 }
 
 .button:hover{
@@ -9,6 +8,9 @@
     -fx-background-color: #403434;
 }
 
+.label{
+    -fx-text-fill: black;
+}
 
 .text-field{
     -fx-background-color: #474546;
