--- a/src/sample/ADM/dashboard.fxml
+++ b/src/sample/ADM/dashboard.fxml
@@ -46,7 +46,7 @@
             <Insets />
          </StackPane.margin>
       </Button>
-      <Label prefHeight="16.0" prefWidth="99.0" text="OPHTHALMA" textFill="WHITE" StackPane.alignment="TOP_LEFT">
+      <Label prefHeight="16.0" prefWidth="99.0" text="OSPITALITY" textFill="WHITE" StackPane.alignment="TOP_LEFT">
          <padding>
             <Insets left="10.0" />
          </padding>
