--- a/src/sample/DOC/patientsAndScans.fxml
+++ b/src/sample/DOC/patientsAndScans.fxml
@@ -85,7 +85,7 @@
                 <Insets right="15.0" top="7.0" />
             </StackPane.margin>
         </Button>
-        <Label prefHeight="16.0" prefWidth="99.0" text="OPHTHALMA" StackPane.alignment="TOP_LEFT">
+        <Label prefHeight="16.0" prefWidth="99.0" text="OSPITALITY" StackPane.alignment="TOP_LEFT">
             <padding>
                 <Insets left="10.0" />
             </padding>
