--- a/src/sample/RCP/appointment.fxml
+++ b/src/sample/RCP/appointment.fxml
@@ -32,7 +32,7 @@
         <Button fx:id="logOutBTN" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="40.0" mnemonicParsing="false" onAction="#callLogOut" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
             <graphic>
                 <ImageView fitHeight="18.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
-                    <Image url="@../Assets/logoutDark.png" />
+                    <Image url="@/sample/Assets/logoutDark.png" />
                 </ImageView>
             </graphic>
             <font>
@@ -42,7 +42,7 @@
                 <Insets />
             </StackPane.margin>
         </Button>
-        <Label prefHeight="16.0" prefWidth="99.0" text="OPHTHALMA" StackPane.alignment="TOP_LEFT">
+        <Label prefHeight="16.0" prefWidth="99.0" text="OSPITALITY" StackPane.alignment="TOP_LEFT">
             <padding>
                 <Insets left="10.0" />
             </padding>
@@ -59,7 +59,7 @@
             </font>
             <graphic>
                 <ImageView fitHeight="22.0" fitWidth="17.0" pickOnBounds="true" preserveRatio="true">
-                    <Image url="@../Assets/settingDark.png" />
+                    <Image url="@/sample/Assets/settingDark.png" />
                 </ImageView>
             </graphic>
             <StackPane.margin>
@@ -69,7 +69,7 @@
         <Button fx:id="notificationBTN" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="40.0" mnemonicParsing="false" onAction="#callNotifications" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
             <graphic>
                 <ImageView fitHeight="20.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
-                    <Image url="@../Assets/notificationDark.png" />
+                    <Image url="@/sample/Assets/notificationDark.png" />
                 </ImageView>
             </graphic>
             <font>
@@ -82,7 +82,7 @@
         <Button fx:id="chatBubbleBTN" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="40.0" mnemonicParsing="false" onAction="#callChatBubble" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
             <graphic>
                 <ImageView fitHeight="21.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
-                    <Image url="@../Assets/chatDark.png" />
+                    <Image url="@/sample/Assets/chatDark.png" />
                 </ImageView>
             </graphic>
             <font>
@@ -101,18 +101,19 @@
             </StackPane.margin>
         </Button>
     </StackPane>
-   <SplitPane dividerPositions="0.29797979797979796" prefHeight="160.0" prefWidth="200.0">
-     <items>
-       <AnchorPane maxWidth="175.0" minHeight="0.0" minWidth="175.0" prefHeight="160.0" prefWidth="175.0">
-            <children>
-               <Button fx:id="newAppointmentBTN" layoutX="-1.0" layoutY="1.0" maxHeight="40.0" minHeight="40.0" mnemonicParsing="false" onAction="#callNewAppointment" prefHeight="40.0" prefWidth="175.0" text="New Appointment" AnchorPane.topAnchor="0.0" />
-               <Button fx:id="modifyAppointmentBTN" layoutX="-2.0" layoutY="40.0" maxHeight="40.0" minHeight="40.0" mnemonicParsing="false" onAction="#callModifyAppointment" prefHeight="40.0" prefWidth="175.0" text="Modify Appointment" AnchorPane.topAnchor="40.0" />
-            </children>
-         </AnchorPane>
-         <BorderPane fx:id="appointmentPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" />
-     </items>
-      <StackPane.margin>
-         <Insets top="40.0" />
-      </StackPane.margin>
-   </SplitPane>
+    <SplitPane dividerPositions="0.29797979797979796" prefHeight="160.0" prefWidth="200.0">
+        <StackPane.margin>
+            <Insets top="40.0"/>
+        </StackPane.margin>
+        <AnchorPane maxWidth="175.0" minHeight="0.0" minWidth="175.0" prefHeight="160.0" prefWidth="175.0">
+            <Button fx:id="newAppointmentBTN" layoutX="-1.0" layoutY="1.0" maxHeight="40.0" minHeight="40.0"
+                    mnemonicParsing="false" onAction="#callNewAppointment" prefHeight="40.0" prefWidth="175.0"
+                    text="New Appointment" AnchorPane.topAnchor="0.0"/>
+            <Button fx:id="modifyAppointmentBTN" layoutX="-2.0" layoutY="40.0" maxHeight="40.0" minHeight="40.0"
+                    mnemonicParsing="false" onAction="#callModifyAppointment" prefHeight="40.0" prefWidth="175.0"
+                    text="Modify Appointment" AnchorPane.topAnchor="40.0"/>
+        </AnchorPane>
+        <BorderPane fx:id="appointmentPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                    minHeight="-Infinity" minWidth="-Infinity"/>
+    </SplitPane>
 </StackPane>
