--- a/src/sample/RCP/modifyAppointment.fxml
+++ b/src/sample/RCP/modifyAppointment.fxml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
 
-<StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../Styles/style3.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.RCP.modifyAppointmentController">
+<StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" stylesheets="@../Styles/style3.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.RCP.modifyAppointmentController">
    <children>
       <TextField fx:id="patientIDTxt" maxWidth="200.0" minWidth="100.0" promptText="Enter Patient ID" StackPane.alignment="TOP_CENTER">
          <StackPane.margin>
@@ -37,10 +44,44 @@
             <DropShadow />
          </effect>
       </Button>
-      <StackPane fx:id="innerStack" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="150.0" prefWidth="200.0" StackPane.alignment="CENTER">
+      <StackPane fx:id="innerStack" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="150.0" prefWidth="200.0" style="-fx-border-color: #464546;" StackPane.alignment="CENTER">
          <StackPane.margin>
             <Insets bottom="80.0" top="100.0" />
          </StackPane.margin>
+         <children>
+            <AnchorPane maxWidth="210.0" prefHeight="200.0" prefWidth="200.0" style="-fx-border-color: inherit;" StackPane.alignment="CENTER_LEFT">
+               <children>
+                  <ListView fx:id="appointmentList" editable="true" layoutX="8.0" layoutY="-12.0" maxWidth="1.7976931348623157E308" onMouseClicked="#callGetAppointment" prefHeight="200.0" prefWidth="200.0" style="-fx-border-color: inherit;" stylesheets="@../Styles/style3.css" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0" />
+                  <Label fx:id="patientName" layoutX="58.0" layoutY="6.0" text="patientName" />
+                  <Label layoutX="42.0" layoutY="28.0" text="Appointments List" />
+               </children>
+            </AnchorPane>
+            <ComboBox fx:id="departmentCB" editable="true" prefWidth="200.0">
+               <StackPane.margin>
+                  <Insets bottom="50.0" left="50.0" />
+               </StackPane.margin>
+               <items>
+                  <FXCollections fx:factory="observableArrayList">
+                     <String fx:value="Pediatrician" />
+                     <String fx:value="Dermatologist" />
+                     <String fx:value="Ophthalmologist" />
+                     <String fx:value="Psychiatrist" />
+                     <String fx:value="Allergist/Immunologist" />
+                     <String fx:value="Urologist" />
+                     <String fx:value="Neurologist" />
+                     <String fx:value="Cardiologist" />
+                     <String fx:value="Otolaryngologist" />
+                     <String fx:value="Endocrinologist" />
+                     <String fx:value="Podiatrist" />
+                  </FXCollections>
+               </items>
+            </ComboBox>
+            <DatePicker fx:id="datePicker" prefWidth="200.0">
+               <StackPane.margin>
+                  <Insets left="50.0" top="50.0" />
+               </StackPane.margin>
+            </DatePicker>
+         </children>
       </StackPane>
    </children>
 </StackPane>
