--- a/src/sample/RCP/newAppointment.fxml
+++ b/src/sample/RCP/newAppointment.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -7,63 +9,98 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.effect.Reflection?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="600.0" stylesheets="@../Styles/style3.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.RCP.newAppointmentController">
-   <children>
-      <Label text="Patient ID" StackPane.alignment="CENTER">
-         <StackPane.margin>
-            <Insets bottom="200.0" right="300.0" />
-         </StackPane.margin>
-      </Label>
-      <TextField fx:id="patientIDTxt" maxWidth="200.0" minWidth="100.0" StackPane.alignment="CENTER">
-         <StackPane.margin>
-            <Insets bottom="200.0" />
-         </StackPane.margin>
-      </TextField>
-      <Label layoutX="60.0" layoutY="102.0" text="Department" StackPane.alignment="CENTER">
-         <StackPane.margin>
-            <Insets bottom="100.0" right="300.0" />
-         </StackPane.margin>
-         <padding>
-            <Insets right="25.0" />
-         </padding>
-      </Label>
-      <ComboBox fx:id="chooseDepartmentCB" maxWidth="200.0" minWidth="100.0" prefWidth="200.0" StackPane.alignment="CENTER">
-         <StackPane.margin>
-            <Insets bottom="100.0" />
-         </StackPane.margin>
-         <effect>
-            <DropShadow />
-         </effect>
-      </ComboBox>
-      <Button fx:id="newPatientBTN" mnemonicParsing="false" onAction="#callNewPatient" text="New Patient" StackPane.alignment="TOP_RIGHT">
-         <StackPane.margin>
-            <Insets right="20.0" top="20.0" />
-         </StackPane.margin>
-         <effect>
-            <DropShadow />
-         </effect>
-      </Button>
-      <Button fx:id="submitBTN" layoutX="463.0" layoutY="30.0" mnemonicParsing="false" onAction="#callSubmit" text="Submit" StackPane.alignment="CENTER">
-         <StackPane.margin>
-            <Insets top="100.0" />
-         </StackPane.margin>
-         <effect>
-            <DropShadow />
-         </effect>
-      </Button>
-      <DatePicker fx:id="datePicker" promptText="date" showWeekNumbers="true" StackPane.alignment="CENTER">
-         <effect>
-            <DropShadow />
-         </effect></DatePicker>
-      <Label layoutX="60.0" layoutY="152.0" text="Date" StackPane.alignment="CENTER">
-         <StackPane.margin>
-            <Insets right="300.0" />
-         </StackPane.margin>
-         <padding>
-            <Insets left="20.0" />
-         </padding>
-      </Label>
-   </children>
+<StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="500.0" prefWidth="600.0" stylesheets="@../Styles/style3.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.RCP.newAppointmentController">
+   <Label text="Patient ID" StackPane.alignment="CENTER">
+      <StackPane.margin>
+         <Insets bottom="200.0" right="300.0" />
+      </StackPane.margin>
+   </Label>
+   <TextField fx:id="patientIDTxt" maxWidth="200.0" minWidth="100.0" StackPane.alignment="CENTER">
+      <StackPane.margin>
+         <Insets bottom="200.0" />
+      </StackPane.margin>
+   </TextField>
+   <Label layoutX="60.0" layoutY="102.0" text="Department" StackPane.alignment="CENTER">
+      <StackPane.margin>
+         <Insets bottom="100.0" right="300.0" />
+      </StackPane.margin>
+      <padding>
+         <Insets right="25.0" />
+      </padding>
+   </Label>
+   <ComboBox fx:id="chooseDepartmentCB" editable="true" maxWidth="200.0" minWidth="100.0" prefWidth="200.0" StackPane.alignment="CENTER">
+      <StackPane.margin>
+         <Insets bottom="100.0" />
+      </StackPane.margin>
+      <effect>
+         <DropShadow />
+      </effect>
+      <items>
+         <FXCollections fx:factory="observableArrayList">
+            <String fx:value="Pediatrician" />
+            <String fx:value="Dermatologist" />
+            <String fx:value="Ophthalmologist" />
+            <String fx:value="Psychiatrist" />
+            <String fx:value="Allergist/Immunologist" />
+            <String fx:value="Urologist" />
+            <String fx:value="Neurologist" />
+            <String fx:value="Cardiologist" />
+            <String fx:value="Otolaryngologist" />
+            <String fx:value="Endocrinologist" />
+            <String fx:value="Podiatrist" />
+         </FXCollections>
+      </items>
+   </ComboBox>
+   <Button fx:id="newPatientBTN" mnemonicParsing="false" onAction="#callNewPatient" text="New Patient" StackPane.alignment="TOP_RIGHT">
+      <StackPane.margin>
+         <Insets right="20.0" top="20.0" />
+      </StackPane.margin>
+      <effect>
+         <DropShadow />
+      </effect>
+   </Button>
+   <Button fx:id="submitBTN" layoutX="463.0" layoutY="30.0" mnemonicParsing="false" onAction="#callSubmit" text="Submit" StackPane.alignment="CENTER">
+      <StackPane.margin>
+         <Insets top="100.0" />
+      </StackPane.margin>
+      <effect>
+         <DropShadow />
+      </effect>
+   </Button>
+   <DatePicker fx:id="datePicker" promptText="date" showWeekNumbers="true" StackPane.alignment="CENTER">
+      <effect>
+         <DropShadow />
+      </effect>
+   </DatePicker>
+   <Label layoutX="60.0" layoutY="152.0" text="Date" StackPane.alignment="CENTER">
+      <StackPane.margin>
+         <Insets right="300.0" />
+      </StackPane.margin>
+      <padding>
+         <Insets left="20.0" />
+      </padding>
+   </Label>
+   <Label text="NEW APPOINTMENT" StackPane.alignment="TOP_CENTER">
+      <StackPane.margin>
+         <Insets top="50.0" />
+      </StackPane.margin>
+      <font>
+         <Font size="27.0" />
+      </font>
+      <effect>
+         <Reflection topOpacity="0.21" />
+      </effect>
+   </Label>
+   <Label fx:id="successTxt" style="-fx-text-fill: #44f129;" textFill="#44f229" StackPane.alignment="CENTER">
+      <StackPane.margin>
+         <Insets top="200.0" />
+      </StackPane.margin>
+      <font>
+         <Font size="20.0" />
+      </font>
+   </Label>
 </StackPane>
