--- a/src/sample/RCP/receipt.fxml
+++ b/src/sample/RCP/receipt.fxml
@@ -34,7 +34,7 @@
         <Button fx:id="logOutBTN" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="40.0" mnemonicParsing="false" onAction="#callLogOut" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
             <graphic>
                 <ImageView fitHeight="18.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
-                    <Image url="@../Assets/logoutDark.png" />
+                    <Image url="@/sample/Assets/logoutDark.png" />
                 </ImageView>
             </graphic>
             <font>
@@ -44,7 +44,7 @@
                 <Insets />
             </StackPane.margin>
         </Button>
-        <Label prefHeight="16.0" prefWidth="99.0" text="OPHTHALMA" StackPane.alignment="TOP_LEFT">
+        <Label prefHeight="16.0" prefWidth="99.0" text="OSPITALITY" StackPane.alignment="TOP_LEFT">
             <padding>
                 <Insets left="10.0" />
             </padding>
@@ -61,7 +61,7 @@
             </font>
             <graphic>
                 <ImageView fitHeight="22.0" fitWidth="17.0" pickOnBounds="true" preserveRatio="true">
-                    <Image url="@../Assets/settingDark.png" />
+                    <Image url="@/sample/Assets/settingDark.png" />
                 </ImageView>
             </graphic>
             <StackPane.margin>
@@ -71,7 +71,7 @@
         <Button fx:id="notificationBTN" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="40.0" mnemonicParsing="false" onAction="#callNotifications" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
             <graphic>
                 <ImageView fitHeight="20.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
-                    <Image url="@../Assets/notificationDark.png" />
+                    <Image url="@/sample/Assets/notificationDark.png" />
                 </ImageView>
             </graphic>
             <font>
@@ -84,7 +84,7 @@
         <Button fx:id="chatBubbleBTN" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="40.0" mnemonicParsing="false" onAction="#callChatBubble" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
             <graphic>
                 <ImageView fitHeight="21.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
-                    <Image url="@../Assets/chatDark.png" />
+                    <Image url="@/sample/Assets/chatDark.png" />
                 </ImageView>
             </graphic>
             <font>
