--- a/src/sample/database.fxml
+++ b/src/sample/database.fxml
@@ -10,79 +10,105 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
-           minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@Styles/style3.css"
-           xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-           fx:controller="sample.databaseController">
+<StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@Styles/style3.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.databaseController">
    <Label text="DATABASE SETUP" StackPane.alignment="TOP_CENTER">
       <font>
-         <Font size="27.0"/>
+         <Font size="27.0" />
       </font>
       <StackPane.margin>
-         <Insets bottom="150.0" top="180.0"/>
+         <Insets bottom="150.0" top="180.0" />
       </StackPane.margin>
       <effect>
-         <Reflection topOpacity="0.18"/>
+         <Reflection topOpacity="0.18" />
       </effect>
    </Label>
-   <Label text="WELCOME TO OPHTHALMA" StackPane.alignment="TOP_CENTER">
+   <Label text="WELCOME TO OSPITALITY" StackPane.alignment="TOP_CENTER">
       <font>
-         <Font size="27.0"/>
+         <Font size="27.0" />
       </font>
       <StackPane.margin>
-         <Insets top="20.0"/>
+         <Insets top="20.0" />
       </StackPane.margin>
       <effect>
-         <DropShadow/>
+         <DropShadow />
       </effect>
    </Label>
    <Label layoutX="128.0" layoutY="30.0" text="THIS IS A ONE TIME PROCESS" StackPane.alignment="TOP_CENTER">
       <font>
-         <Font size="27.0"/>
+         <Font size="27.0" />
       </font>
       <StackPane.margin>
-         <Insets top="100.0"/>
+         <Insets top="100.0" />
       </StackPane.margin>
       <effect>
-         <DropShadow/>
+         <DropShadow />
       </effect>
    </Label>
    <TextField fx:id="userIdTxt" maxWidth="200.0" minWidth="200.0">
       <StackPane.margin>
-         <Insets top="100.0"/>
+         <Insets top="100.0" />
       </StackPane.margin>
    </TextField>
    <Button fx:id="loginBTN" mnemonicParsing="false" onAction="#callLogin" text="Login" StackPane.alignment="CENTER">
       <StackPane.margin>
-         <Insets top="300.0"/>
+         <Insets top="300.0" />
       </StackPane.margin>
    </Button>
    <Label text="PASSWORD">
       <StackPane.margin>
-         <Insets right="300.0" top="200.0"/>
+         <Insets right="330.0" top="200.0" />
       </StackPane.margin>
    </Label>
    <Label text="USER ID" StackPane.alignment="CENTER">
       <StackPane.margin>
-         <Insets right="300.0" top="100.0"/>
+         <Insets right="305.0" top="100.0" />
       </StackPane.margin>
    </Label>
    <Label layoutX="122.0" layoutY="252.0" text="Please Enter your MySQL credentials">
       <StackPane.margin>
-         <Insets/>
+         <Insets bottom="60.0" />
       </StackPane.margin>
       <effect>
-         <DropShadow/>
+         <DropShadow />
       </effect>
    </Label>
    <PasswordField fx:id="passwordTxt" maxWidth="200.0" minWidth="200.0">
       <StackPane.margin>
-         <Insets top="200.0"/>
+         <Insets top="200.0" />
       </StackPane.margin>
    </PasswordField>
    <Label fx:id="errorLoginTxt" textAlignment="CENTER" textFill="RED">
       <StackPane.margin>
-         <Insets top="250.0"/>
+         <Insets top="250.0" />
+      </StackPane.margin>
+   </Label>
+   <StackPane fx:id="databaseStackpane" maxHeight="120.0" minHeight="120.0" prefHeight="120.0" prefWidth="200.0" visible="false" StackPane.alignment="BOTTOM_CENTER">
+      <StackPane.margin>
+         <Insets top="500.0" />
+      </StackPane.margin>
+      <children>
+         <Label fx:id="databaseFoundTxt" StackPane.alignment="TOP_CENTER">
+            <StackPane.margin>
+               <Insets top="20.0" />
+            </StackPane.margin>
+            <font>
+               <Font size="18.0" />
+            </font>
+         </Label>
+         <Label fx:id="settingDatabaseTxt" layoutX="410.0" layoutY="30.0" StackPane.alignment="TOP_CENTER">
+            <font>
+               <Font size="18.0" />
+            </font>
+            <StackPane.margin>
+               <Insets top="65.0" />
+            </StackPane.margin>
+         </Label>
+      </children>
+   </StackPane>
+   <TextField fx:id="ipTxt" layoutX="310.0" layoutY="347.0" maxWidth="200.0" minWidth="200.0" />
+   <Label layoutX="234.0" layoutY="352.0" text="IP OF SERVER">
+      <StackPane.margin>
+         <Insets right="335.0" />
       </StackPane.margin>
    </Label>
 </StackPane>
